src/App.css
/* ... */
.page__container--right .page__container__triangle.disabled{ pointer-events: none; filter: grayscale(100%);}

.page__container--right .page__container__points--container {display:none}


/* HOMEPAGE */
.start .page__container--left{ background:transparent; background-image:url(./assets/img/first_page_paper.png); border:unset; box-shadow:unset; -moz-box-shadow:unset; -webkit-box-shadow:unset; background-repeat: no-repeat; background-position-y: bottom; padding:0; margin:0;}
.start .page__container--left > * {margin:0; max-width:400px; padding-right:70px; padding-top:35px; text-align:left; line-height:32px}
.start .page__container--left > b {margin-top:-3px;}
.start .page__container--right{ box-sizing: border-box; border:unset; background:grey; background-image:url(./assets/img/front_book_cover.jpg); background-position: right top; color: white; -webkit-box-shadow: 0px 0px 25px 8px rgba(0,0,0,0.75); -moz-box-shadow: 0px 0px 25px 8px rgba(0,0,0,0.75); box-shadow: 0px 0px 25px 8px rgba(0,0,0,0.75); }
.start .page__container--right::before{ display: block; content:''; left:-32px; top:-50px; transform:scale(.8); position:absolute; width:85px; height:115%; background-image:url(./assets/img/front_book_ring.png);  }
.start .page__container--right .page__container__sticker{ padding-top:20px; -webkit-box-shadow: 0px 0px 25px -10px rgba(0,0,0,0.75); -moz-box-shadow: 0px 0px 25px -10px rgba(0,0,0,0.75); box-shadow: 0px 0px 25px -10px rgba(0,0,0,0.75); background:white; background-image:url(./assets/img/front_book_sticker_bg.jpg); width:225px; padding:45px; margin-top:5%; color:black; transform:rotate(1.25deg); text-align: center;}
.start .page__container--right .page__container__sticker::before{display: block; content:''; right:-40px; top:-20px; position:absolute; width:100px; height:85px; background-image:url(./assets/img/front_book_sticker.png); }
.start .page__container--right .page__container__sticker::after{display: block; content:''; left:-30px; bottom:-30px; position:absolute; width:100px; height:85px; background-image:url(./assets/img/front_book_sticker.png); }
.start .page__container--right .page__container__sticker form{ margin-top: 20px; }
.start .page__container--right .page__container__sticker h2{ margin:unset; font-size:3.25em }
.start .page__container--right .page__container__sticker label{ font-size:1.5em; margin-top:10px; }
.start .page__container--right .page__container__sticker label::before{ transform:rotate(-3deg); content:''; width:150px; height:55px; z-index:-1; background-image:url(./assets/img/front_book_hangman.png); position:absolute; bottom:54px; right:0px; display: flex; background-repeat:no-repeat  }
.start .page__container--right .page__container__sticker input{ font-family: Fondamento; font-weight:800; font-size:.9em; padding-top:5px; text-align:center; -moz-appearance: textfield; margin-left:2.5%; width: 70px; height:25px; z-index:9999; border-width:10px 5px; border-style:solid; border-color: rgba(12, 14, 90, 0.949);}
.start .page__container--left::after{ background-image:none; }


/* WORD SELECT */
.word_select .page__container--left[data-firstpage=true] { background:#424550; background-image:url(./assets/img/wordguess_book_cover.jpg); background-position: right top; }
.word_select .page__container--right h2{ font-size:2.5em; padding-top:14px; margin-bottom:26px; }
.word_select .page__container--right h3{ font-size:1.3em; font-family:Rubik; text-align:center; margin-top:38px;}
.word_select .page__container--right form{ display:flex; }
.word_select .page__container--right input{  margin-top:-5px; border-width: 3px; border-style: solid; border-color: rgba(12, 14, 90, 0.949); padding: 10px; }
.word_select .page__container--right .page__container--right--eyeIcon{ opacity:.5; display:inline-block; margin:0; margin-left:10px; background-image:url(./assets/img/icons8-eye-48.png); width:45px; height:30px; background-size:contain; background-repeat: no-repeat; background-position: bottom center;}
.word_select .page__container--right .page__container--right--eyeIcon:hover{cursor:pointer; opacity:1;}
/* GAME */
.game h2{ font-size:2.4em; margin-top:14px; }

.page__container__points--container{ text-align: center; }

.page__container__points{ display:flex; flex-direction: column; width:400px; margin-top:-10px; }

.page__container__points ul{ display:flex; justify-content:space-around; list-style-type: none; text-align:center; padding:0px; margin:0px;}
.page__container__points ul li{border:2px solid black}

.page__container__points .page__container__points__heading ul{ border-bottom:2px solid #424550; }

.page__container__points .page__container__points__players{ position: relative; display:flex; flex-direction: row; justify-content: space-around;}
.page__container__points .page__container__points__players > div { width:50%; text-align:center; border:2px solid black; border-top:unset; padding:15px 0px; font-weight:800; }

.page__container__points .page__container__points__players ul li,
.page__container__points .page__container__points__heading ul li{width:50%; padding:10px 0px; font-weight:800; font-size:1.25em}

.page__container--right h2.letters__container__endround--win{color:green; text-align:center; font-size:2.5em; margin-bottom:0px;}
.page__container--right h2.letters__container__endround--lose{color:red; text-align:center; font-size:2.5em; margin-bottom:0px;}
.page__container--right .letters__container--points{ text-align: center; margin:0 auto; }

.game .page__container--left::after{position: relative; min-height:85%; height:85%; top:-170px; }

/* TODO
@keyframes anim{
  from {transform:rotateY(-200deg)}
  to {transform: translateX(-560px);}
}

.word_select .page__container--right{ 
  animation: anim 5s infinite !important;
}
*/

